6555
Compiler's job is to disallow simultaneous compilation of two of the same package object.  Far as I can see it does that, so the bug should be reported elsewhere.
```scala
b.scala:2: error: package is already defined as object bar
  package object bar {
                 ^
one error found
```
